--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/Users/FBI Agent/Desktop/CI553-CW-miniStore/lib/db-derby-10.14.2.0-lib/lib/derby.jar">
+	<classpathentry kind="lib" path="C:/Users/jarvi/Desktop/CI553-CW-miniStore/lib/db-derby-10.14.2.0-lib/lib/derby.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
